overflow fix

--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     background-color: black;
+    overflow-y:hidden;
+    overflow-x:hidden;
 }
 
 #gameOver {
